[gd_scene load_steps=2 format=2]

[ext_resource path="res://openstreetmap_demos/locations.gd" type="Script" id=1]

[node name="Locations" type="GridContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -324.0
margin_bottom = 76.0
columns = 2
script = ExtResource( 1 )

[node name="Country" type="OptionButton" parent="."]
margin_right = 160.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="City" type="OptionButton" parent="."]
margin_left = 164.0
margin_right = 324.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="LatitudeLabel" type="Label" parent="."]
margin_top = 29.0
margin_right = 160.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Latitude"

[node name="Latitude" type="LineEdit" parent="."]
margin_left = 164.0
margin_top = 24.0
margin_right = 324.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="LongitudeLabel" type="Label" parent="."]
margin_top = 57.0
margin_right = 160.0
margin_bottom = 71.0
size_flags_horizontal = 3
text = "Longitude"

[node name="Longitude" type="LineEdit" parent="."]
margin_left = 164.0
margin_top = 52.0
margin_right = 324.0
margin_bottom = 76.0
size_flags_horizontal = 3

[connection signal="item_selected" from="Country" to="." method="select_country"]
[connection signal="item_selected" from="City" to="." method="select_city"]
[connection signal="text_entered" from="Latitude" to="." method="commit_location"]
[connection signal="text_entered" from="Longitude" to="." method="commit_location"]
